--- a/angular.json
+++ b/angular.json
@@ -117,6 +117,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "angular-routing"
+    }
+  },
+  "defaultProject": "angular-routing",
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
+  }
 }
